--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,10 @@ dependencies = [
     "typing-extensions",
     "rastermap"
 ]
+
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = ["setuptools>=61.0"]
+
+[project.scripts]
+posdc = "posdc.main_cli:main"
